deployments/sre-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-app
  labels:
    app: sre-django
spec:
  ports:
    - port: 8000
  selector:
    app: sre-django
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sre-app
  labels:
    app: sre-django
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sre-django
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sre-django
    spec:
      containers:
      - image: zguanhan/sre-f21-app:latest
        name: django
        ports:
          - containerPort: 8000
            name: sre-django
