deployments/sre-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-nginx
  labels:
    app: sre-nginx
spec:
  ports:
    - port: 80
  selector:
    app: sre-nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sre-nginx
  labels:
    app: sre-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sre-nginx
  strategy:
    type: RollingUpdate
  minReadySeconds: 3
  template:
    metadata:
      labels:
        app: sre-nginx
    spec:
      containers:
      - image: zguanhan/sre-f21-nginx:latest
        name: nginx
        ports:
          - containerPort: 80
            name: sre-nginx
