deployments/sre-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sre-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - sre-dev.minamiktr.com
    secretName: sre-tls
  rules:
  - host: sre-dev.minamiktr.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sre-app
            port:
              number: 8000
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: sre-nginx
            port:
              number: 80
      - path: /favicon.ico
        pathType: Exact
        backend:
          service:
            name: sre-nginx
            port:
              number: 80
